--- a/src/main/resources/messages/HTMLMessages.properties
+++ b/src/main/resources/messages/HTMLMessages.properties
@@ -11,6 +11,7 @@ U0201.LABEL.STEP=手段
 U0201.LABEL.PERIOD=期限
 U0201.LABEL.RESULT=結果
 U0201.LABEL.START=初め
+U0201.LABEL.WAVE=～
 U0201.LABEL.END=終わり
 U0201.BUTTON.SEARCH=検索
 U0201.BUTTON.DOWNLOAD=ダウンロード
@@ -19,3 +20,4 @@ U0201.BUTTON.DELETE=削除
 U0201.BUTTON.TOGGLE=＞
 
 /* U03-01:目標登録画面 */
+U0203.TITLE=登録画面
