--- a/src/main/resources/messages/HTMLMessages.properties
+++ b/src/main/resources/messages/HTMLMessages.properties
@@ -1,3 +1,9 @@
+/* エラー画面 */
+ERROR.TITLE=エラー画面
+ERROR.SUBTITLE=エラー
+ERROR.MESSAGE=何らかのエラーが発生しました。ホーム画面からやり直してください。
+ERROR.BUTTON.HOME=ホーム画面へ戻る
+
 /* 共通 */
 COMMON.TITLE=目標管理
 
@@ -18,6 +24,8 @@ U0201.BUTTON.DOWNLOAD=ダウンロード
 U0201.BUTTON.REGIST=登録
 U0201.BUTTON.DELETE=削除
 U0201.BUTTON.TOGGLE=＞
+U0201.CONFIRM001=目標・手段を削除します。よろしいですか？\n※目標を削除する場合、紐づく手段も削除されます。
+
 
 /* U03-01:目標登録画面 */
 U0203.TITLE=登録画面
