--- a/src/main/resources/messages/HTMLMessages.properties
+++ b/src/main/resources/messages/HTMLMessages.properties
@@ -1,8 +1,8 @@
 /* エラー画面 */
 ERROR.TITLE=エラー画面
 ERROR.SUBTITLE=エラー
-ERROR.MESSAGE=何らかのエラーが発生しました。ホーム画面からやり直してください。
-ERROR.BUTTON.HOME=ホーム画面へ戻る
+ERROR.MESSAGE=何らかのエラーが発生しました。一覧画面からやり直してください。
+ERROR.BUTTON.HOME=一覧画面へ戻る
 
 /* 共通 */
 COMMON.TITLE=目標管理
