--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.database=POSTGRESQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/tmdb
-spring.datasource.username=end_user
-spring.datasource.password=aA1!1234
+spring.jpa.database=
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
